--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -216,6 +216,7 @@
 .price__links {
   position: absolute;
   bottom: 31px;
+  padding-top: 20px;
   left: 50%;
   transform: translateX(-50%);
   width: 262px;
